--- a/.github/workflows/twitter.yml
+++ b/.github/workflows/twitter.yml
@@ -2,10 +2,10 @@ name: Twitter Auto Poster
 
 on:
   schedule:
-    - cron: "0 9 * * *"   # 12:00 Baghdad
-    - cron: "0 16 * * *"  # 19:00 Baghdad
-    - cron: "*/30 * * * *"  # فحص مستجدات كل 30 دقيقة
-  workflow_dispatch: {}      # تشغيل يدوي عند الحاجة
+    - cron: "0 9 * * *"    # 12:00 بتوقيت بغداد (UTC+3)
+    - cron: "0 16 * * *"   # 19:00 بتوقيت بغداد (UTC+3)
+    - cron: "*/30 * * * *" # فحص مستجدات كل 30 دقيقة
+  workflow_dispatch: {}     # تشغيل يدوي عند الحاجة
 
 jobs:
   post:
@@ -13,21 +13,38 @@ jobs:
     concurrency:
       group: twitter-bot
       cancel-in-progress: false
+
     steps:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Set up Python
+      # اختياري: تسريع تثبيت الحزم
+      - name: Setup Python
         uses: actions/setup-python@v5
         with:
           python-version: "3.11"
 
-      - name: Install deps
+      - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-      - name: Run bot (one shot)
+      # 1) تنزيل الحالة السابقة إن وُجدت (بدون فشل لو غير موجودة)
+      - name: Download state artifacts (if any)
+        uses: actions/download-artifact@v4
+        with:
+          name: twitter-state
+          path: .
+        continue-on-error: true
+
+      # 2) تهيئة ملفات الحالة الفارغة إذا لم تكن موجودة
+      - name: Ensure state files exist
+        run: |
+          [ -f posts.json ] || echo "[]" > posts.json
+          [ -f last_resurface.txt ] || echo "0" > last_resurface.txt
+
+      # 3) تشغيل البوت (مرة واحدة)
+      - name: Run bot
         env:
           TW_API_KEY: ${{ secrets.TW_API_KEY }}
           TW_API_KEY_SECRET: ${{ secrets.TW_API_KEY_SECRET }}
@@ -36,5 +53,18 @@ jobs:
           TW_BEARER_TOKEN: ${{ secrets.TW_BEARER_TOKEN }}
           BLOG_RSS_URL: ${{ secrets.BLOG_RSS_URL }}
           SITE_URL: ${{ secrets.SITE_URL }}
+          RESURFACE_EVERY_HOURS: "72"
+          MAX_NEW_PER_RUN: "3"
         run: |
           python main.py
+
+      # 4) رفع الحالة المحدثة كـ artifact (تُستَخدم في التشغيل القادم)
+      - name: Upload state artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: twitter-state
+          path: |
+            posts.json
+            last_resurface.txt
+          if-no-files-found: ignore
+          retention-days: 60
